--- a/dev/04_Development/demo01/src/app/app.component.html
+++ b/dev/04_Development/demo01/src/app/app.component.html
@@ -6,11 +6,11 @@
   <span>Make Painful Painful</span>
   <div class="spacer"></div>
   <a id="Settings" href="" title="Settings">
-    <span>Settings</span>
+    <span>Icon &nbsp; Settings</span>
   </a>
   &nbsp;
   <a id="Share" href="" title="Share">
-    <span>Share</span>
+    <span>Icon &nbsp; Share</span>
   </a>
   &nbsp;
 </div>
@@ -19,34 +19,49 @@
 <div id="left">
   <div id="leftTop">
     <span>
-        bookmark area
+        &nbsp;&nbsp;// bookmark area
+      <img src="../images/demo0_bookmark.png" alt="bookmarkarea" width="250" height="200" border-radius="15px" align="center">
     </span>
   </div>
   &nbsp;<br>
   <div  id="leftBottom">
-        comments area
+    &nbsp;&nbsp;// comments area
+    <img src="../images/demo0_comments.png" alt="bookmarkarea" width="300" height="200" border-radius="15px" align="center">
+
   </div>
 </div>
 
 <div id="middle">
   <h2>Finding your hurts</h2>
   <p>Click on some places you feel uncomfortable and find sth. useful</p>
-  <img src="../images/body.png" alt="pic" width="300px" height="370px">
+  <img src="../images/body0.png" alt="pic" width="190px" height="410px">
 
   <div id="special">
-    after click, prompt
-    <p>quiz answer find more</p>
+    <p>// after click, prompt</p>
+    <br>
+    <p>
+      Symptoms:<br> &nbsp;&nbsp;#$%^#$% <br>
+       <br>
+      Causes:<br> &nbsp;&nbsp;#$%^#$% <br>
+      <br>
+      Treatments:<br> &nbsp;&nbsp;#$%^#$% <br>
+    </p>
+    <p>// maybe quiz ?</p>
   </div>
 </div>
 <div id="right">
-  votes and charts area
+  // votes and charts area
+  <br>
+  <div>
+    <img src="../images/demo1_votes.png" alt="1" width="280" height="130" border-radius="15px" align="center">
+  </div>
+  <br>
+  <br>
+  <br>
+  <p>Results:</p>
+  <img src="../images/demo0_votes.png" alt="2" width="290" height="200" border-radius="15px" align="center">
+
 </div>
-
-
-
-
-
-
 
 
 
@@ -73,9 +88,20 @@
 
       </a>
 
+
   </footer>
 
 
+  <div id="notes">
+    <p>
+      All the fonts, colors, pictures are temporary !! Dont worry though it's ugly
+    </p>
+    <p>
+      border would be deleted after design, just for visibility now.
+    </p>
+
+  </div>
 
 </div>
+
 
