--- a/dev/04_Development/demo02/src/app/app.component.html
+++ b/dev/04_Development/demo02/src/app/app.component.html
@@ -4,7 +4,7 @@
       <a class="nav-link" routerLink="/bar-chart">Bar Chart</a>
     </li>
   </ul>
-  <div>
-    <router-outlet></router-outlet>
+  <div id="votesBarBox">
+    <router-outlet  id="votesBar"></router-outlet>
   </div>
 </div>
