--- a/dev/04_Development/demo03/src/app/app.component.html
+++ b/dev/04_Development/demo03/src/app/app.component.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="app.component.css">
-
+<meta charset="utf-8">
 <!-- Toolbar -->
 <div class="toolbar" role="banner">
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -16,12 +16,37 @@
 <div class="content">
   <div class="chart" role="main">
     <app-bar-chart> </app-bar-chart>
+
+
+
+    <div style="font-family: Silom">
+      字体测试 Font Test silom
+    </div>
+    <div style="font-family: Phosphate">
+      字体测试 Font Test phosphate
+    </div>
+    <div style="font-family: Chalkboard">
+      字体测试 Font Test chalkboard
+    </div>
+    <div style="font-family: Arial;">
+      字体测试 Font Test arial
+    </div>
+    <div style="font-family: Calibri">
+      字体测试 Font Test calibri
+    </div>
+    <div style="font-family: Ayuthaya">
+      字体测试 Font Test ayuthaya
+    </div>
+
+
+
+
   </div>
   <div class="mod" >
 
   </div>
-</div>
 
+</div>
 
 
 <router-outlet></router-outlet>
