demo02 add service and css

--- a/dev/04_Development/proj/src/app/bar-chart/bar-chart.component.html
+++ b/dev/04_Development/proj/src/app/bar-chart/bar-chart.component.html
@@ -1,6 +1,6 @@
 <div>
-  <div style="display: block; width: 500px;">
-    <canvas baseChart width="2" height="3"
+  <div style="display: block">
+    <canvas baseChart
             [datasets]="barChartData"
             [labels]="barChartLabels"
             [options]="barChartOptions"
