--- a/dev/04_Development/frontEnd/src/app/app.component.html
+++ b/dev/04_Development/frontEnd/src/app/app.component.html
@@ -13,8 +13,8 @@
 </div>
 <div class="areas" id="body_right">
 
-  3
-  <button class="btn" onclick="updatachart()"> vote </button>
+  <img src="../assets/body.png" alt="123" height="800px" width="600px">
+
 </div>
 <div class="areas" id="footer">
 <strong>
