--- a/dev/04_Development/proj/src/app/app.component.html
+++ b/dev/04_Development/proj/src/app/app.component.html
@@ -1,7 +1,3 @@
-
-
-
-
 <link rel="stylesheet" href="app.component.css">
 <style>
   body{
@@ -18,13 +14,22 @@
 
 
   <div class="container">
-<!--    <ul class="nav nav-tabs">-->
-<!--      <li class="nav-item">-->
-<!--        <a class="nav-link" routerLink="/bar-chart">Bar Chart</a>-->
-<!--      </li>-->
-<!--    </ul>-->
-    <div id="votesBarBox">
-      <router-outlet  id="votesBar"></router-outlet>
+    <ul class="nav nav-tabs">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/bar-chart">Bar Chart</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/doughnut-chart">Doughnut Chart</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/radar-chart">Radar Chart</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/pie-chart">Pie Chart</a>
+      </li>
+    </ul>
+    <div>
+      <router-outlet></router-outlet>
     </div>
   </div>
 
