--- a/dev/04_Development/demo02/src/app/app.component.html
+++ b/dev/04_Development/demo02/src/app/app.component.html
@@ -1,45 +1,35 @@
-
-
-
-
-<link rel="stylesheet" href="app.component.css">
-<style>
-  body{
-    background-color: rgb(245,245,245);
-  }
-</style>
+<!--This area is made for the header-->
 <div class="areas" id="header">
-
-  Make Painful Painful
+  {{title}}
 </div>
-<div class="areas" id="body_left">
 
-
-
-
-  <div class="container">
-<!--    <ul class="nav nav-tabs">-->
-<!--      <li class="nav-item">-->
-<!--        <a class="nav-link" routerLink="/bar-chart">Bar Chart</a>-->
-<!--      </li>-->
-<!--    </ul>-->
+<!--This area is made for the main content, including 3 parts-->
+<div>
+  <div id="body_left">
     <div id="votesBarBox">
-      <router-outlet  id="votesBar"></router-outlet>
+      <app-bar-chart  id="votesBar"></app-bar-chart>
     </div>
   </div>
 
-</div>
-<div class="areas" id="body_right">
+  <div id="body_right">
+<!--      <img src="../assets/body.png" alt="123" height="800px" width="620px">-->
+<app-main-body> </app-main-body>
 
-  <img src="../assets/body.png" alt="123" height="800px" width="600px">
+  </div>
 
+  <div id="card-right">
+
+  </div>
 </div>
+
+
+
+
 <div class="areas" id="footer">
   <strong>
     Disclaimer:
   </strong>
-
-  <br/>
+  <hr/>
   These These suggestions are not offered as a substitute for the qualified medical advice or treatment you have received from your personal physician. We strongly recommend that you consult with your own physician or physiotherapist before beginning any exercise. You should be in good physical condition and be able to participate in these exercise.  You should understand that when participating in any exercise, there is the possibility of physical injury. If you engage in these exercise or exercise programs listed here, you agree that you do so at your own risk, are voluntarily participating in these activities, assume all risk of injury to yourself and agree to release and discharge  our website from any and all claims or causes of action. known or unknown, arising out of Make Painful painful negligence.
 </div>
 
