--- a/dev/04_Development/demo02/src/app/main-body/main-body.component.html
+++ b/dev/04_Development/demo02/src/app/main-body/main-body.component.html
@@ -1,14 +1,14 @@
 <img id="img1" src="/assets/body.png" alt="body" useMap="#planetMap">
 <map name="planetMap" id="planetMap">
-  <area shape="circle" coords="270,140,15" alt="Shoulder" id="s1" onMouseOver="show1()">
-  <area shape="circle" coords="100,130,15" alt="Neck" id="s2" onMouseOver="show2()">
-  <area shape="circle" coords="280,300,15" alt="Back" id="s3" onMouseOver="show3()">
-  <area shape="circle" coords="290,360,15" alt="Lumbar" id="s4" onMouseOver="show4()">
-  <area shape="circle" coords="85,425,15" alt="Wrist" id="s5" onMouseOver="show5()">
-  <area shape="circle" coords="305,575,15" alt="Leg" id="s6" onMouseOver="show6()">
-  <area shape="circle" coords="170,65,15" alt="Eyes" id="s7" onMouseOver="show7()">
-  <area shape="circle" coords="120,30,15" alt="Head" id="s8" onMouseOver="show8()">
-  <area shape="circle" coords="320,675,15" alt="Foot" id="s9" onMouseOver="show9()">
+  <area class="tmp" shape="circle" coords="270,140,15" alt="Shoulder" id="s1" onMouseOver="show1()">
+  <area class="tmp" shape="circle" coords="100,130,15" alt="Neck" id="s2" onMouseOver="show2()">
+  <area class="tmp" shape="circle" coords="280,300,15" alt="Back" id="s3" onMouseOver="show3()">
+  <area class="tmp" shape="circle" coords="290,360,15" alt="Lumbar" id="s4" onMouseOver="show4()">
+  <area class="tmp" shape="circle" coords="85,425,15" alt="Wrist" id="s5" onMouseOver="show5()">
+  <area class="tmp" shape="circle" coords="305,575,15" alt="Leg" id="s6" onMouseOver="show6()">
+  <area class="tmp" shape="circle" coords="170,65,15" alt="Eyes" id="s7" onMouseOver="show7()">
+  <area class="tmp" shape="circle" coords="120,30,15" alt="Head" id="s8" onMouseOver="show8()">
+  <area class="tmp" shape="circle" coords="320,675,15" alt="Foot" id="s9" onMouseOver="show9()">
 </map>
 
 <div class="circle1" id = "circle1"></div>
