--- a/dev/04_Development/demo02/src/app/bar-chart/bar-chart.component.html
+++ b/dev/04_Development/demo02/src/app/bar-chart/bar-chart.component.html
@@ -26,6 +26,13 @@
             border-radius: 30px; padding: 20px; background-color: #e9e2e5">
   <strong>Comments:</strong>
 
+
+
+  <div id="tst" style="border: #46505a solid 1px; width: 100px; height: 100px">
+    {{tstString}}
+  </div>
+
+
 </div>
 
 
