--- a/dev/04_Development/demo02/src/app/bar-chart/bar-chart.component.html
+++ b/dev/04_Development/demo02/src/app/bar-chart/bar-chart.component.html
@@ -15,8 +15,6 @@
   <button *ngFor="let barChartLabel of barChartLabels"
   style="display: block; width: 120px; margin: 38px 0 37px 0; height: 40px; border-radius: 5px"
           (click)="clkbtn(barChartLabel)"
-
-
   >
     {{barChartLabel}}
   </button>
@@ -26,12 +24,9 @@
             border-radius: 30px; padding: 20px; background-color: #e9e2e5">
   <strong>Comments:</strong>
 
-
-
-  <div id="tst" style="border: #46505a solid 1px; width: 100px; height: 100px">
-    {{tstString}}
-  </div>
-
+<!--  <div id="tst" style="border: #46505a solid 1px; width: 100px; height: 100px">-->
+<!--    {{tstString}}-->
+<!--  </div>-->
 
 </div>
 
