--- a/dev/04_Development/demo02/src/app/bar-chart/bar-chart.component.html
+++ b/dev/04_Development/demo02/src/app/bar-chart/bar-chart.component.html
@@ -23,7 +23,21 @@
 <div style="display: inline-block; height: 700px; width: 300px; margin: 50px;  position: absolute;left: 680px;
             border-radius: 30px; padding: 20px; background-color: #e9e2e5">
   <strong>Comments:</strong>
+  <hr/>
+  <br/>
+  <div *ngFor="let comment of comments">
+    {{comment}}
+    <br/>
+  </div>
 
+  <div style="position: absolute; left: 20px; top: 500px">
+    <hr/>
+    <form name="inputComments" action="http://localhost:3000/" method="get">
+      <input type="text">
+      <input type="submit" >
+    </form>
+
+  </div>
 <!--  <div id="tst" style="border: #46505a solid 1px; width: 100px; height: 100px">-->
 <!--    {{tstString}}-->
 <!--  </div>-->
