--- a/dev/04_Development/demo02/src/app/bar-chart/bar-chart.component.html
+++ b/dev/04_Development/demo02/src/app/bar-chart/bar-chart.component.html
@@ -11,7 +11,7 @@
   </canvas>
 </div>
 
-<div style="display: inline-block;height: 800px; width: 150px; position: absolute;left: 550px">
+<div style="display: inline-block;height: 800px; width: 150px; position: absolute;left: 550px; font-family: Silom;">
   <button *ngFor="let barChartLabel of barChartLabels"
   style="display: block; width: 120px; margin: 38px 0 37px 0; height: 40px; border-radius: 5px"
           (click)="clkbtn(barChartLabel)"
@@ -21,7 +21,7 @@
 </div>
 
 <div style="display: inline-block; height: 700px; width: 300px; margin: 50px;  position: absolute;left: 680px;
-            border-radius: 30px; padding: 20px; background-color: #e9e2e5">
+            border-radius: 30px; padding: 20px; background-color: #e9e2e5; font-family: Silom;">
   <strong>Comments:</strong>
   <hr/>
   <br/>
@@ -33,7 +33,8 @@
   <div style="position: absolute; left: 20px; top: 500px">
     <hr/>
     <form name="inputComments" action="http://localhost:3000/" method="get">
-      <input type="text">
+      <input type="text" size="15px">
+      &nbsp;
       <input type="submit" >
     </form>
 
