--- a/dev/04_Development/demo02/src/app/main-body/main-body.component.html
+++ b/dev/04_Development/demo02/src/app/main-body/main-body.component.html
@@ -1,3 +1,6 @@
+<div style="z-index: 800; display: inline-block; position: relative; float: right; font-family: Silom; font-size: 20px">
+  Hover mouse on red circles.
+</div>
 <img id="img1" src="/assets/body.png" alt="body" useMap="#planetMap">
 <map name="planetMap" id="planetMap">
   <area class="tmp" shape="circle" coords="270,140,15" alt="Shoulder" id="s1" onMouseOver="show1()">
