--- a/dev/04_Development/demo02/src/app/app.component.css
+++ b/dev/04_Development/demo02/src/app/app.component.css
@@ -1,3 +1,4 @@
+/*This is for the bar chart of vetes*/
 #votesBar{
   background-color: #80808030;
   height: auto;
@@ -19,6 +20,7 @@
   text-align: center;
 }
 
+/*This is for the top bar*/
 #header{
   height: 60px ;
   margin: 30px;
@@ -35,15 +37,13 @@
   color: #46505a;
 }
 
-
+/*This is for the bottom disclaimer*/
 #footer{
   margin: 10px 200px 0 200px;
   height: 60px;
-
   clear: right;
   font-size: 14px;
   font-family: Arial;
-
   position: relative;
   top: 10px;
 }
@@ -77,7 +77,6 @@
   right: 0;
   z-index: 500;
   position: fixed;
-
 }
 
 #card-right{
