--- a/dev/04_Development/demo02/src/app/app.component.html
+++ b/dev/04_Development/demo02/src/app/app.component.html
@@ -5,22 +5,22 @@
 
 <!--This area is made for the main content, including 3 parts-->
 <div style="min-width: 2000px">
+<!--  Bar chart and comments are-->
   <div id="body_left" >
     <div id="votesBarBox" >
       <app-bar-chart  id="votesBar"></app-bar-chart>
     </div>
   </div>
-
+<!--body-mouse hover area-->
   <div id="body_right">
 <!--      <img src="../assets/body.png" alt="123" height="800px" width="620px">-->
 <!--    <div style="height: 800px; width: 200px; display: inline-block">-->
-
 <!--    </div>-->
     <app-main-body> </app-main-body>
   </div>
 </div>
 
-
+<!--foor area for Disclaimer-->
 <div class="areas" id="footer">
   <strong>
     Disclaimer:
